fixing project cards having weird scroll on mobile

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -398,6 +398,7 @@
 
   @include media-query($on-palm) {
     @include span-columns(12);
+    @include shift(0);
   }
 
   .card {
@@ -423,6 +424,7 @@
 
     @include media-query($on-palm) {
       @include span-columns(10);
+      @include shift(1);
       display: flex;
       flex-direction: column;
       height: 300px;
